--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/georgiahaddock/tom-riddles-diary/issues"
   },
-  "homepage": "https://github.com/georgiahaddock/tom-riddles-diary#readme"
+  "homepage": "https://github.com/georgiahaddock/tom-riddles-diary#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "sequelize": "^6.28.0"
+  }
 }
