--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/georgiahaddock/tom-riddles-diary#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "nodemon": "^2.0.20",
     "sequelize": "^6.28.0",
     "sqlite": "^4.1.2"
   }
