--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Where he may write his deepest, darkest secrets away from prying eyes - and hackers!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -19,8 +20,10 @@
   "homepage": "https://github.com/georgiahaddock/tom-riddles-diary#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "jest": "^29.4.3",
     "nodemon": "^2.0.20",
     "sequelize": "^6.28.0",
-    "sqlite": "^4.1.2"
+    "sqlite": "^4.1.2",
+    "sqlite3": "^5.1.4"
   }
 }
