--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/georgiahaddock/tom-riddles-diary#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "express-openid-connect": "^2.12.0",
     "jest": "^29.4.3",
     "nodemon": "^2.0.20",
     "sequelize": "^6.28.0",
