--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/georgiahaddock/tom-riddles-diary#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-openid-connect": "^2.12.0",
     "jest": "^29.4.3",
