--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Where he may write his deepest, darkest secrets away from prying eyes - and hackers!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon server.js",
     "seed": "node db/seed.js"
   },
