auth0 working finally!

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemon": "^2.0.20",
     "sequelize": "^6.28.0",
     "sqlite": "^4.1.2",
-    "sqlite3": "^5.1.4"
+    "sqlite3": "^5.1.4",
+    "supertest": "^6.3.3"
   }
 }
