--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
   },
   "homepage": "https://github.com/georgiahaddock/tom-riddles-diary#readme",
   "dependencies": {
+    "auth0": "^3.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-openid-connect": "^2.12.0",
-    "jest": "^29.4.3",
-    "nodemon": "^2.0.20",
-    "sequelize": "^6.28.0",
+    "fs": "^0.0.1-security",
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.21",
+    "sequelize": "^6.29.1",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4",
     "supertest": "^6.3.3"
